# hf-insights

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
.github/actions/python-poetry-env/: action.yml
.github/workflows/: build.yml  publish.yml
data/: models.csv  small.csv
hf_insights/: 01_Home.py  main.py
hf_insights/common/: logger.py
hf_insights/pages/: 02_Model_Stats.py  03_Task_Stats.py
notebooks/: scrape.ipynb  simplify_data.ipynb
